<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/registerRoot"
    tools:context="ku00015.shoutapp.RegisterActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:src="@drawable/ic_close"
        android:background="@null"
        android:onClick="onCloseClick"
        android:scaleType="fitCenter"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/shout_logo"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_marginBottom="20dp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RegUserTextInput">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameRegister"
                android:textAlignment="textStart"
                android:inputType="textCapCharacters"
                android:padding="10dp"
                android:maxLength="20"
                android:hint="@string/username"
                android:textColor="@color/backColor"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RegEmailTextInput">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailRegister"
                android:textAlignment="textStart"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:hint="@string/email"
                android:textColor="@color/backColor"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passRegTextInput">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordRegister"
                android:textAlignment="textStart"
                android:inputType="textPassword"
                android:padding="10dp"
                android:maxLength="20"
                android:hint="@string/password"
                android:textColor="@color/backColor"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passConfirmTextInput">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passConfirmRegister"
                android:textAlignment="textStart"
                android:inputType="textPassword"
                android:padding="10dp"
                android:maxLength="20"
                android:hint="@string/confirm"
                android:textColor="@color/backColor"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:id="@+id/registerButton"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_button"
            android:textColor="@color/colorPrimary"
            android:onClick="onRegisterClicked"
            android:fontFamily="sans-serif-light"
            />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
