<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/userActivityRoot"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ku00015.shoutapp.UserActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:src="@drawable/ic_x"
        android:background="@null"
        android:onClick="onCloseClick"
        android:scaleType="fitCenter"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/shout_logo"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_marginBottom="20dp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/UsernameTextInput">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameLogin"
                android:textAlignment="textStart"
                android:inputType="textCapCharacters"
                android:padding="12dp"
                android:maxLength="16"
                android:hint="@string/username"
                android:textColor="@color/backColor"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/passwordTextInput">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordLogin"
                android:textAlignment="textStart"
                android:inputType="textPassword"
                android:padding="12dp"
                android:maxLength="20"
                android:hint="@string/password"
                android:textColor="@color/backColor"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:id="@+id/loginButton"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_button"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorPrimary"
            android:onClick="onLogIn"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dont_have_account"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-light"
            android:onClick="onNeedToRegister"
            android:clickable="true" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
